<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_routine_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rosianu.workoutnotebook.ui.addroutine.AddRoutineActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/routine_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_next_routine"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/sets_layout"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/routine_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputFields"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="@dimen/defaultMargin"
                    android:hint="@string/text_routine_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/DarkSlateGray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sets_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/reps_layout"
                app:layout_constraintTop_toBottomOf="@+id/name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/routine_sets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputFields"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="@dimen/defaultMargin"
                    android:hint="@string/text_routine_sets"
                    android:inputType="textPersonName"
                    android:textColor="@color/DarkSlateGray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reps_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/weight_layout"
                app:layout_constraintTop_toBottomOf="@id/sets_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/routine_reps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputFields"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="@dimen/defaultMargin"
                    android:hint="@string/text_routine_reps"
                    android:inputType="textPersonName"
                    android:textColor="@color/DarkSlateGray" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weight_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/reps_layout"
                app:layout_constraintBottom_toTopOf="@id/rest_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/routine_weight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/inputFields"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="@dimen/defaultMargin"
                    android:hint="@string/text_routine_weight"
                    android:inputType="textPersonName"
                    android:textColor="@color/DarkSlateGray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rest_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/weight_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/routine_rest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/inputFields"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="@dimen/defaultMargin"
                    android:hint="@string/text_routine_rest"
                    android:inputType="textPersonName"
                    android:textColor="@color/DarkSlateGray" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/button_previous_routine"
        android:layout_width="@dimen/_42sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="@dimen/defaultMargin"
        android:src="@drawable/ic_baseline_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routine_scroll_view"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/button_save_routine"
        style="@style/buttonColorAndBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:text="@string/text_save_routines"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_next_routine"
        app:layout_constraintStart_toEndOf="@id/button_previous_routine"
        app:layout_constraintTop_toBottomOf="@+id/routine_scroll_view" />

    <ImageView
        android:id="@+id/button_next_routine"
        android:layout_width="@dimen/_42sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:src="@drawable/ic_baseline_arrow_right_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routine_scroll_view"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>