...
    <string name="text_routine_sets_list">Sets: </string>
    <string name="text_routine_reps_list">Reps: </string>
    <string name="text_routine_weight_list">Weight: </string>
    <string name="text_routine_rest_list">Rest: </string>
    <string name="text_error_add_workout_empty_title">"Title cannot be empty" </string>
    <string name="text_toast_add_routine_onContinue">Please fill in all the information to add a routine to your workout</string>
    <string name="text_field_cannotEmpty">Field cannot be empty</string>
    <string name="text_delete_workout">Delete Workout</string>
    <string name="text_dialog_delete_routines">Are you sure you want to delete this workout?</string>
    <string name="text_dialog_edit_workout">This workout name already exists. Are you sure you want to proceed?</string>
    <string name="text_dialog_alert_cancel">Cancel</string>
    <string name="text_dialog_alert_confirm">Confirm</string>
    <string name="text_dialog_delete_routines_back_button">Are you sure you want to quit? Progress might be lost</string>
...
